# odoo-clockify

./: .env  .gitignore  README.md  coverage.json  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/actions/: test.yaml
.github/workflows/: deploy.yaml  test.yaml
functions/: clockify_webhook.py  timesheets_sync.py
functions/clockify/: clockify.py
functions/odoo/: odoo.py
src/: projects_sync.py
src/functions/: projects_sync.py
src/functions/webhook/: config.py  handler.py  logger.py  request_processor.py
src/webhook/: config.py  consumer.py  producer.py
tests/: config.py
