[tool.poetry]
name = "odoo-clockify-sync"
version = "0.1.0"
description = ""
authors = ["Jean-Paul Weijers <jpweijers@users.noreply.github.com>"]
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
