[tool.poetry]
name = "odoo-clockify-sync"
version = "0.1.0"
description = ""
authors = ["Jean-Paul Weijers <jpweijers@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
aiohttp = "^3.8.1"
coverage = "^6.3.2"
clockify-api = "^0.1.0"
simplejson = "^3.17.6"
odoo-api = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.1"
boto3 = "^1.21.46"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
